; ModuleID = '/home/carl/AnghaBench/git/extr_remote.c_parseopt_push_cas_option.c'
source_filename = "/home/carl/AnghaBench/git/extr_remote.c_parseopt_push_cas_option.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.option = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @parseopt_push_cas_option(%struct.option* %0, i8* %1, i32 %2) #0 {
  %4 = alloca %struct.option*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store %struct.option* %0, %struct.option** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.option*, %struct.option** %4, align 8
  %8 = getelementptr inbounds %struct.option, %struct.option* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i8*, i8** %5, align 8
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @parse_push_cas_option(i32 %9, i8* %10, i32 %11)
  ret i32 %12
}

declare dso_local i32 @parse_push_cas_option(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
